gnome-terminal (3.22.1-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Bump Build-Depends on libvte-2.91-dev to (>= 0.46.1) as per configure.ac.

 -- Michael Biebl <biebl@debian.org>  Tue, 08 Nov 2016 15:54:02 +0100

gnome-terminal (3.22.0-3) unstable; urgency=medium

  * debian/control.in:
    - Recommend default-dbus-session-bus | dbus-session-bus instead of
      dbus-x11 (Closes: #835889)

 -- Jeremy Bicha <jbicha@ubuntu.com>  Thu, 29 Sep 2016 22:21:38 -0400

gnome-terminal (3.22.0-2) unstable; urgency=medium

  * Bump Build-Depends on libnautilus-extension-dev to (>= 3.21.92-3~) to
    ensure we have a version with multiarch support.

 -- Michael Biebl <biebl@debian.org>  Wed, 21 Sep 2016 22:10:54 +0200

gnome-terminal (3.22.0-1) unstable; urgency=medium

  * New upstream release.
  * Bump vte build-dependency to >= 0.46.0 according to configure.ac changes.

 -- Andreas Henriksson <andreas@fatal.se>  Mon, 19 Sep 2016 10:47:54 +0200

gnome-terminal (3.21.92-1) unstable; urgency=medium

  * New upstream development release.
  * Bump Build-Depends on libvte-2.91-dev to (>= 0.45.92) as per configure.ac.
  * Drop Revert-window-Fix-CSD-size-calculations-with-long-ti.patch and
    window-Fix-CSD-size-calculations-with-long-titles.patch, merged upstream.
  * Bump debhelper compat level to 10.
  * Install nautilus extension into multiarch path.

 -- Michael Biebl <biebl@debian.org>  Wed, 14 Sep 2016 18:42:34 +0200

gnome-terminal (3.21.90-3) unstable; urgency=medium

  * Team upload

  [ Sjoerd Simons ]
  * debian/patches/window-Fix-CSD-size-calculations-with-long-titles.patch
    - Added. Fix terminal window unintentially resizing when using long titles
      and CSD (bgo#769898c9)

 -- Simon McVittie <smcv@debian.org>  Wed, 07 Sep 2016 13:25:38 +0100

gnome-terminal (3.21.90-2) unstable; urgency=medium

  * Upload to unstable.
  * Convert from cdbs to dh.
  * Enable all hardening flags.
